# hydock

./: Cargo.toml  Makefile  README.md  install.sh  style.css
assets/: config.toml  style.css
docs/: CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md  STYLING.md
resources/: config.toml  style.css
src/: main.rs
