[package]
name = "hydock"
version = "1.3.0"
authors = ["Sergey Desyatkov <sergeidesyatkov@gmail.com>"]
edition = "2024"
description = "Hydock is a Rust + GTK dock that uses Hyprland IPC"
repository = "https://github.com/desyatkoff/hydock"
license = "GPL-3.0-or-later"

[dependencies]
glib = "0.21"
gtk4 = "0.9"
gtk4-layer-shell = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.4"
